--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Bootstrap</title>
+    <title>Branding</title>
     <!-- Bootstrap Link -->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <!-- font awesome -->
@@ -16,16 +16,19 @@
 </head>
 <body>
     <header id="header" class="bg-dark">
-        <div class="container" style="height: 80vh">
+        <div class="container">
             <div class="row">
-                <div class="col-md-7 ml-3 text-white p-3">
-                    <h1>
-                        <strong>Let's Build</strong><br/>
-                        <small>The Future of Digital Products Together.</small>
-                    </h1>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem corrupti quia illum veniam voluptas perspiciatis dolore aliquid eaque asperiores! Nulla?</p>
-                    <a href="" class="btn btn-outline-light text-primary active btn-lg m-2 p-2 rounded">Discover Theme</a>
-                    <a href="" class="btn btn-outline-light btn-lg m-2 p-2 rounded">Discover Theme</a>
+                <div class="col header-wrap">
+                    <div class="col-md-7 m-5 text-white p-3">
+                        <h1>
+                            <strong>Let's Build</strong><br/>
+                            <small>The Future of Digital Products Together.</small>
+                        </h1>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem corrupti quia illum veniam voluptas perspiciatis dolore aliquid eaque asperiores! Nulla?</p>
+                        <a href="" class="btn btn-outline-light text-primary active btn-lg m-2 px-4 py-2 rounded bder">Discover Theme</a>
+                        <a href="" class="btn btn-outline-light text-primary btn-lg m-2 px-4 py-2 rounded bder">Discover Theme</a> 
+                    </div>
+                    <img src="/Img/bcglayer.png" alt="" class="header-pic d-none d-md-block">
                 </div>
             </div>
         </div>
@@ -90,11 +93,11 @@
     </section>
     <!-- end of first section -->
     <!-- second section -->
-    <section id="second" class="bg-secondary" style="height: 100vh;">
+    <section id="second" style="height: 70vh;">
         <div class="container">
             <div class="row">
                 <div class="col m-2 p-5 mx-auto text-center text-dark">
-                    <h1>Service of Business and Corporate Support</h1>                    
+                    <h1 class="font-weight-bold">Service of Business and Corporate Support</h1>                    
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates, dolorem.</p>
                 </div>
             </div>
@@ -105,10 +108,10 @@
     <section id="third" class="bg-primary">
         <div class="container">
             <div class="row">
-                <div class="col mx-auto text-white p-5">
+                <div class="col text-white p-5 mx-auto text-center">
                     <h1 class="text-uppercase text-light">have you fall in love with the theme yet?</h1>
-                    <a href="" class="btn btn-outline-light text-primary btn-lg m-2 p-2 rounded active">Discover Theme</a>
-                    <a href="" class="btn btn-outline-light btn-lg m-2 p-2 rounded">Contact Us</a>
+                    <a href="" class="btn btn-outline-light text-primary btn-lg m-2 px-4 py-2 rounded active bder">Discover Theme</a>
+                    <a href="" class="btn btn-outline-light btn-lg m-2 px-4 py-2 rounded bder ">Contact Us</a>
                 </div>
             </div>
         </div>
@@ -123,24 +126,33 @@
                     <div class="line1 bg-primary rounded"></div>
                 </div>
             </div>
+            <div class="row m-3">
+                <ul class="d-flex text-center mx-auto ">
+                    <li class="list-group-item list">All</li>
+                    <li class="list-group-item list">Web Design</li>
+                    <li class="list-group-item list">Graphics Design</li>
+                    <li class="list-group-item list">Branding</li>
+                    <li class="list-group-item list">Web Development</li>
+                </ul>
+            </div>
             <div class="row py-3">
                     <div class="col-sm-6 col-md-4">
-                        <img src="/Img/img2" alt="" class="img-fluid rounded">
+                        <img style="height: 200px; width: 400px" src="/Img/project1.jpg" alt="" class="img-fluid rounded m-2">
                     </div>
                     <div class="col-sm-6 col-md-4">
-                        <img src="/Img/img2" alt="" class="img-fluid rounded">
+                        <img style="height: 200px; width: 400px" src="/Img/thethree" alt="" class="img-fluid rounded m-2">
                     </div>
                     <div class="col-sm-6 col-md-4">
-                        <img src="/Img/img2" alt="" class="img-fluid rounded">
+                        <img style="height: 200px; width: 400px" src="/Img/project3.jpg" alt="" class="img-fluid rounded m-2">
                     </div>
                     <div class="col-sm-6 col-md-4">
-                        <img src="/Img/img2" alt="" class="img-fluid rounded">
+                        <img style="height: 200px; width: 400px" src="/Img/project4.jpg" alt="" class="img-fluid rounded m-2">
                     </div>
                     <div class="col-sm-6 col-md-4">
-                        <img src="/Img/img2" alt="" class="img-fluid rounded">
+                        <img style="height: 200px; width: 400px" src="/Img/project2.jpg" alt="" class="img-fluid rounded m-2">
                     </div>
                     <div class="col-sm-6 col-md-4">
-                        <img src="/Img/img2" alt="" class="img-fluid rounded">
+                        <img style="height: 200px; width: 400px" src="/Img/img2" alt="" class="img-fluid rounded m-2">
                     </div>
                 </div>
             </div>
@@ -148,21 +160,24 @@
     </section>
     <!-- end of fourth section -->
     <!-- fifth section -->
-    <section id="fifth" class="bg-secondary py-5">
+    <section id="fifth" class="bg-grey py-5">
         <div class="container">
             <div class="row">
                 <!-- first partition -->
                 <div class="col-md-6">
                     <h1 class="text-center mb-0">Awesome Tab</h1>
                     <div class="line1 bg-primary rounded"></div>
-                    <div class="bg-light w-100 mt-2 py-1"><span class="text-bold text-light bg-primary  mr-3 p-2">-</span>Responsive Web Design</div>
-                    <div class="bg-light mt-1 p-3 d-flex w-100">
-                        <i class="fab fa-facebook fa-2x"></i>
-                        <p class="text-muted p-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium odio incidunt nihil aliquid quam molestias voluptates omnis porro laudantium explicabo?</p>
+                    <button id="butn" onclick="change();" class="btn bg-light mt-2 pl-0 w-100 text-left"><span id="plus" class="bg-grey p-2">+</span> Responsive & Parallax Design</button>
+                    <div id="butntext" class="row bg-light mt-1 ml-0 py-1 w-100 d-none">
+                        <div class="col-1">
+                            <i class="fab fa-facebook fa-2x"></i>
+                        </div>
+                        <div class="col-10">
+                            <p class="text-muted p-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, tempore.</p>
+                        </div>
                     </div>
-                    <!-- <div class="bg-light w-100 mt-1 py-1"><span class="text-bold text-light bg-primary  mr-3 p-2">-</span>Free Demo Content Installations</div> -->
-                    <div class="bg-light w-100 mt-1 py-1"> <button id="butn" class="btn btn-sm mr-1 p-2 bg-primary" onclick="change();"><h5 id="minus">-</h5></button> Free Demo Content Installations</div>
-                    <div class="bg-light w-100 mt-1 py-1"><span class="text-bold text-light bg-primary  mr-3 p-2">-</span>Easy to Use</div>
+                    <button id="butn" class="btn bg-light mt-2 pl-0 w-100 text-left"><span class="bg-grey p-2">+</span>Free Demo Content Installation</button>
+                    <button id="butn" class="btn bg-light mt-2 pl-0 w-100 text-left"><span class="bg-grey p-2">+</span> Easy to use</button>
                 </div>
                 <!-- second partition -->
                 <div class="col-md-6">
@@ -325,9 +340,6 @@
                         <p class="text-light text-titlecase">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem impedit sit qui ipsum minima numquam neque? Possimus in modi inventore.</p>
                     </div>
                 </div>
-                <div class="row">    
-                    <div class="rounded mx-auto line2"></div>
-                </div>
                 <div class="col-md-6 d-flex p-3">
                     <div class="cod-8 text-right">
                         <h5 class="text-light text-uppercase font-weight-bold">Robert Martin<br/>
@@ -374,7 +386,7 @@
                     <h5 class="font-weight-bold">A fully responsive theme with clean design for your success!</h5>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa veritatis molestias consequatur aliquam non quod sint nostrum quis itaque eius repudiandae, vel assumenda fugiat. Atque error nemo doloremque assumenda sunt.</p>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro fuga enim, nulla quis explicabo laboriosam delectus, eos totam, animi dolore voluptatem. Earum, accusamus vero reprehenderit nisi quas labore dolore ad tempora sapiente nihil, voluptatibus ex, reiciendis numquam velit? Distinctio, hic?</p>
-                    <button class="btn btn-outline-primary text-light px-3 py-2 active rounded">Learn More</button>
+                    <button class="btn bg-primary text-light btn-lg px-4 py-2 rounded bder">Learn More</button>
                 </div>
             </div>
         </div>
@@ -386,6 +398,7 @@
             <div class="row">
                 <div class="col mx-auto text-center">
                     <div id="example" class="carousel slide" data-ride='carousel'>
+                        
                         <!-- texts -->
                         <div class="carousel-inner">
                             <div class="carousel-item active">
@@ -417,6 +430,13 @@
                         <a href="#example" class="carousel-control-next" data-slide="next">
                             <span class="carousel-control-next-icon"></span>
                         </a>
+                            <div class="images text-center mt-3">
+                                <img src="/Img/passport1 (1).jpg" alt="" style="height: 80px; border-radius: 50%;" class="img px-2">
+                                <img src="/Img/passport1 (1).jpg" alt="" style="height: 80px; border-radius: 50%;" class="img px-2">
+                                <img src="/Img/passport1 (1).jpg" alt="" style="height: 100px; border-radius: 50%;" class="img px-2">
+                                <img src="/Img/passport1 (1).jpg" alt="" style="height: 80px; border-radius: 50%;" class="img px-2">
+                                <img src="/Img/passport1 (1).jpg" alt="" style="height: 80px; border-radius: 50%;" class="img px-2">
+                            </div>
                     </div>
                 </div>
             </div>
@@ -430,7 +450,7 @@
                 <div class="col-md-6 col-lg-4 my-3">
                     <div class="card">
                         <div class="bg-light img">
-                            <img src="/Img/thethree" alt="" class="img-fluid ">
+                            <img src="/Img/project1.jpg" alt="" class="img-fluid ">
                             <div class="bg-primary imageText text-light p-2">16TH DECEMBER 2019</div>
                         </div>
                         <div class="card-body">
@@ -443,7 +463,7 @@
                 <div class="col-md-6 col-lg-4 my-3">
                     <div class="card">
                             <div class="bg-light img">
-                                <img src="/Img/thethree" alt="" class="img-fluid ">
+                                <img src="/Img/project3.jpg" alt="" class="img-fluid ">
                                 <div class="bg-primary imageText text-light p-2">16TH DECEMBER 2019</div>
                             </div>
                         <div class="card-body">
@@ -456,7 +476,7 @@
                 <div class="col-md-6 col-lg-4 my-3">
                     <div class="card">
                         <div class="bg-light img">
-                            <img src="/Img/thethree" alt="" class="img-fluid ">
+                            <img src="/Img/project4.jpg" alt="" class="img-fluid ">
                             <div class="bg-primary imageText text-light p-2">16TH DECEMBER 2019</div>
                         </div>
                         <div class="card-body">
