--- a/index.htm
+++ b/index.htm
@@ -164,10 +164,10 @@
         <div class="container">
             <div class="row">
                 <!-- first partition -->
-                <div class="col-md-6">
+                <div class="col-md-6" id="awesome-tab">
                     <h1 class="text-center mb-0">Awesome Tab</h1>
                     <div class="line1 bg-primary rounded"></div>
-                    <button id="butn" onclick="change();" class="btn bg-light mt-2 pl-0 w-100 text-left"><span id="plus" class="bg-grey p-2">+</span> Responsive & Parallax Design</button>
+                    <button id="butn" class="btn bg-light mt-2 pl-0 w-100 text-left"><span id="plus" class="bg-grey p-2">+</span> Responsive & Parallax Design</button>
                     <div id="butntext" class="row bg-light mt-1 ml-0 py-1 w-100 d-none">
                         <div class="col-1">
                             <i class="fab fa-facebook fa-2x"></i>
@@ -176,8 +176,24 @@
                             <p class="text-muted p-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, tempore.</p>
                         </div>
                     </div>
-                    <button id="butn" class="btn bg-light mt-2 pl-0 w-100 text-left"><span class="bg-grey p-2">+</span>Free Demo Content Installation</button>
-                    <button id="butn" class="btn bg-light mt-2 pl-0 w-100 text-left"><span class="bg-grey p-2">+</span> Easy to use</button>
+                    <button id="butn" class="btn bg-light mt-2 pl-0 w-100 text-left"><span id="plus" class="bg-grey p-2">+</span>Free Demo Content Installation</button>
+                    <div id="butntext" class="row bg-light mt-1 ml-0 py-1 w-100 d-none">
+                        <div class="col-1">
+                            <i class="fab fa-facebook fa-2x"></i>
+                        </div>
+                        <div class="col-10">
+                            <p class="text-muted p-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, tempore.</p>
+                        </div>
+                    </div>
+                    <button id="butn" class="btn bg-light mt-2 pl-0 w-100 text-left"><span id="plus" class="bg-grey p-2">+</span> Easy to use</button>
+                    <div id="butntext" class="row bg-light mt-1 ml-0 py-1 w-100 d-none">
+                        <div class="col-1">
+                            <i class="fab fa-facebook fa-2x"></i>
+                        </div>
+                        <div class="col-10">
+                            <p class="text-muted p-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, tempore.</p>
+                        </div>
+                    </div>
                 </div>
                 <!-- second partition -->
                 <div class="col-md-6">
@@ -401,22 +417,22 @@
                         
                         <!-- texts -->
                         <div class="carousel-inner">
-                            <div class="carousel-item active">
+                            <div class="carousel-item active img-txt">
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora sit iure eius id natus quae esse placeat corporis similique dolorum!</p>
                                 <h4>Lorem, ipsum.</h4>
                                 <small>Lorem ipsum dolor sit amet.</small>
                             </div>
-                            <div class="carousel-item">
+                            <div class="carousel-item img-txt">
                                 <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora sit iure eius id natus quae esse placeat corporis similique dolorum!</h5>
                                 <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, recusandae.</h4>
                                 <h2>Lorem ipsum dolor sit amet.</h2>
                             </div>
-                            <div class="carousel-item">
+                            <div class="carousel-item img-txt">
                                 <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora sit iure eius id natus quae esse placeat corporis similique dolorum!</h5>
                                 <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, recusandae.</h4>
                                 <h2>Lorem ipsum dolor sit amet.</h2>
                             </div>
-                            <div class="carousel-item">
+                            <div class="carousel-item img-txt">
                                 <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora sit iure eius id natus quae esse placeat corporis similique dolorum!</h5>
                                 <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, recusandae.</h4>
                                 <h2>Lorem ipsum dolor sit amet.</h2>
@@ -449,7 +465,7 @@
             <div class="row">
                 <div class="col-md-6 col-lg-4 my-3">
                     <div class="card">
-                        <div class="bg-light img">
+                        <div class="bg-light rel">
                             <img src="/Img/project1.jpg" alt="" class="img-fluid ">
                             <div class="bg-primary imageText text-light p-2">16TH DECEMBER 2019</div>
                         </div>
@@ -462,7 +478,7 @@
                 </div>
                 <div class="col-md-6 col-lg-4 my-3">
                     <div class="card">
-                            <div class="bg-light img">
+                            <div class="bg-light rel">
                                 <img src="/Img/project3.jpg" alt="" class="img-fluid ">
                                 <div class="bg-primary imageText text-light p-2">16TH DECEMBER 2019</div>
                             </div>
@@ -475,7 +491,7 @@
                 </div>
                 <div class="col-md-6 col-lg-4 my-3">
                     <div class="card">
-                        <div class="bg-light img">
+                        <div class="bg-light rel">
                             <img src="/Img/project4.jpg" alt="" class="img-fluid ">
                             <div class="bg-primary imageText text-light p-2">16TH DECEMBER 2019</div>
                         </div>
